tests/ui/borrowck/borrowck-block-uninit.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-block-uninit.rs:4:11
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     force(|| {
   |           ^^ `x` used here but it isn't initialized
LL |         println!("{}", x);
   |                        - borrow occurs due to use in closure
   |
help: consider assigning a value
   |
LL |     let x: isize = 42;
   |                  ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
